# pineapple_lqr

./: MUJOCO_LOG.TXT  NOTES.md  PROGRESS.md  README.md  calibrate.py  deploy_lqr.py  deploy_lqr_console.py  deploy_lqr_gui.py  getup_tables_dev.npz  imu_interface.py  lqr_runtime.py  lqr_tables.npz  pyproject.toml
config/: deploy_lqr.yaml
lqr/: calibration.py  controller.py  estimator.py  export_runtime.py  getup.py  linearize.py  model.py  perturb.py  render.py  simulate.py
tests/: conftest.py  test_calibration.py  test_deploy_runner.py  test_getup.py  test_robustness.py  test_runtime_export.py  test_xsens_parser.py
