[project]
name = "pineapple-lqr"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "mujoco>=3.10.0",
    "numpy>=2.5.1",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "viser>=1.0.30",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
